Fix disable enable

--- a/app/views/admins/genres/index.html.erb
+++ b/app/views/admins/genres/index.html.erb
@@ -1,2 +1,17 @@
-<h1>Admins::Genres#index</h1>
-<p>Find me in app/views/admins/genres/index.html.erb</p>
+<div>
+	<%= render "layouts/adminheader"%>
+	<h1>ジャンル管理画面</h1>
+	<%= form_for(@genre, url:admins_genres_path) do |f| %>
+		<%= f.label :ジャンル %>
+		<%= f.text_field :name %>
+		<%= f.submit "追加"%>
+	<% end %>
+	<% @genres.each do |genre| %>
+		<%= genre.name %>
+		<% if genre.is_disable == false %>
+			<%= link_to "無効にする", disable_admins_genre_path(genre), method: :patch %>
+		<% elsif genre.is_disable == true %>
+			<%= link_to "有効にする", enable_admins_genre_path(genre), method: :patch %>
+		<% end %>
+	<% end %>
+</div>
