--- a/app/views/admins/products/show.html.erb
+++ b/app/views/admins/products/show.html.erb
@@ -1,2 +1,35 @@
-<h1>Admins::Products#show</h1>
-<p>Find me in app/views/admins/products/show.html.erb</p>
+<div>
+	<%= render "layouts/adminheader" %>
+	<%= attachment_image_tag @product, :image, :fill, 50, 50 %>
+	<table>
+		<tr>
+			<th>Name</th>
+			<td><%= @product.name %></td>
+		</tr>
+		<tr>
+			<th>Introduction</th>
+			<td><%= @product.introduction %></td>
+		</tr>
+		<tr>
+			<th>Genre</th>
+			<td><%= @product.genre.name %></td>
+		</tr>
+		<tr>
+			<th>Tax-included price</th>
+			<td><%= addTax(@product.price) %> (<%=@product.price%>)円</td>
+		</tr>
+		<tr>
+			<th>Sales status</th>
+			<td>
+				<% if @product.is_stopped == false %>
+					販売中
+				<% elsif @product.is_stopped == true %>
+					販売停止
+				<% end %>
+			</td>
+		</tr>
+	</table>
+	<%= link_to edit_admins_product_path(@product.id) do %>
+		<span>編集する</span>
+	<% end %>
+</div>
