--- a/app/views/admins/products/index.html.erb
+++ b/app/views/admins/products/index.html.erb
@@ -1,2 +1,41 @@
-<h1>Admins::Products#index</h1>
-<p>Find me in app/views/admins/products/index.html.erb</p>
+<div>
+	<%= render "layouts/adminheader"%>
+	<h1>Product index screen</h1>
+	<%= link_to new_admins_product_path do %>
+		<span>New registration screen</span>
+	<% end %>
+	<table>
+		<thead>
+			<tr>
+				<th>Id</th>
+				<th>Image</th>
+				<th>Name</th>
+				<th>Price</th>
+				<th>Genre</th>
+				<th>Status</th>
+			</tr>
+		</thead>
+		<tbody>
+			<% @products.each do |product| %>
+			<tr>
+				<td><%= product.id %></td>
+				<td><%= attachment_image_tag product, :image, :fill, 50, 50 %></td>
+				<td>
+					<%= link_to admins_product_path(product.id) do %>
+					<%= product.name %>
+					<% end %>
+				</td>
+				<td><%= product.price %></td>
+				<td><%= product.genre.name %></td>
+				<td>
+					<% if product.is_stopped? %>
+						<span>Suspended_sales</span>
+					<% else %>
+						<span>Sale</span>
+					<% end %>
+				</td>
+			</tr>
+			<% end %>
+		</tbody>
+	</table>
+</div>
