--- a/app/views/admins/products/new.html.erb
+++ b/app/views/admins/products/new.html.erb
@@ -1,2 +1,18 @@
-<h1>Admins::Products#new</h1>
-<p>Find me in app/views/admins/products/new.html.erb</p>
+<div>
+	<%= render "layouts/adminheader" %>
+	<h1>New product registration screen</h1>
+	<%= form_for(@product, url:admins_products_path) do |f| %>
+	<%= f.label :image %>
+	<%= f.attachment_field :image %>
+	<%= f.label :name %>
+	<%= f.text_field :name %>
+	<%= f.label :introduction %>
+	<%= f.text_area :introduction %>
+	<%= f.label :genre %>
+	<%= f.collection_select :genre_id, Genre.where(is_disable: false), :id, :name %>
+	<%= f.label :price %>
+	<%= f.text_field :price %>
+	<%= f.select :is_stopped, {Sale: false, Suspended_sales: true} %>
+	<%= f.submit "Register" %>
+	<% end %>
+</div>
