Add user_product function  user_cart_item function

--- a/app/views/cart_items/index.html.erb
+++ b/app/views/cart_items/index.html.erb
@@ -1,2 +1,61 @@
-<h1>CartItems#index</h1>
-<p>Find me in app/views/cart_items/index.html.erb</p>
+<div>
+	<%= render "layouts/header" %>
+	<h1>ショッピングカート</h1>
+	<%= form_for cart_items_path, method: :patch do |f| %>
+	<div>
+		<%= link_to cart_items_path ,method: :delete do %>
+		<span>カートを空にする</span>
+		<% end %>
+	</div>
+	<div>
+		<%= link_to root_path do %>
+		<span>買い物を続ける</span>
+		<% end %>
+		<table>
+			<tr>
+				<th>合計金額</th>
+				<td><%= addTax(@total_price)%></td>
+				<td>
+					<%= f.submit "再計算する"%>
+				</td>
+				<td>
+					<%= link_to new_order_path do %>
+					<span>購入する</span>
+					<% end %>
+				</td>
+			</tr>
+		</table>
+	</div>
+	<% @cart_items.each do |item| %>
+		<%= attachment_image_tag item.product, :image, :fill, 100, 100 %>
+		<table>
+			<tr>
+				<th>商品名</th>
+				<td><%= item.product.name %></td>
+			</tr>
+			<tr>
+				<th>単価</th>
+				<td><%= hidden_field_tag :product_price, item.product.price %></td>
+				<td><%= addTax(item.product.price)%></td>
+			</tr>
+			<tr>
+				<th>数量</th>
+				<td>
+					<%= hidden_field_tag "product_id[#{item.id}]", item.product_id %>
+					<%= number_field_tag "quantity[#{item.id}]", item.quantity, in: 1..10 %>
+				</td>
+			</tr>
+			<tr>
+				<th>小計</th>
+				<td>
+					<%= hidden_field_tag "price[#{item.id}]", item.price %>
+					<%= addTax(item.price) %>
+				</td>
+			</tr>
+			<tr>
+				<td><%= link_to '削除する', cart_item_path(item), method: :delete %></td>
+			</tr>
+		</table>
+		<% end %>
+	<% end %>
+</div>
