--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -17,20 +17,20 @@
 </style>
 
 <div class="side-menu">
-	<%= link_to root_path %>
+	<%= link_to root_path do %>
 	<img src="/assets/logo.jpg" alt="非表示" style="margin: 50px 50px 0 50px;" width="250" height="250">
 	<% end %>
 	<% if user_signed_in? %>
-		<%#= link_to user_path(current_user.id) do %>
+		<%= link_to user_path(current_user.id) do %>
 			<p>User</p>
-		<%# end %>
-		<%= link_to about_path do %>
+		<% end %>
+		<%= link_to home_about_path do %>
 			<p>About</p>
 		<% end %>
 		<%= link_to cart_items_path do %>
 			<p>Shooping</p>
 		<% end %>
-		<%= link_to destroy_user_session_path method: :delete do %>
+		<%= link_to destroy_user_session_path, method: :delete do %>
 			<p>Logout</p>
 		<% end %>
 	<% else %>
