--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,2 +1,10 @@
-<h1>Products#index</h1>
-<p>Find me in app/views/products/index.html.erb</p>
+<div>
+	<%= render "layouts/header" %>
+	<% @products.each do |product|%>
+	<%= attachment_image_tag product, :image, :fill, 50 ,50 %>
+	<%= link_to product_path(product.id) do %>
+	<%= product.name %>
+	<% end %>
+	<%= product.price %>
+	<% end %>
+</div>
