--- a/app/views/admins/orders/index.html.erb
+++ b/app/views/admins/orders/index.html.erb
@@ -1,2 +1,9 @@
-<h1>Admins::Orders#index</h1>
-<p>Find me in app/views/admins/orders/index.html.erb</p>
+<div>
+	<h1>本日購入された商品</h1>
+	<% @order.each do |order| %>
+	<%= attachment_image_tag @order, :image, :fill, 50, 50 %>
+	<%= order.name %>
+	<%= order.price%>
+	<%= order.payment%>
+	<% end %>
+</div>
