--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -9,9 +9,9 @@
 		<h4><%= addTax(@product.price)%>
 			<span>円(税込価格)</span>
 		</h4>
-		<%= form_for(@cart_item) do |f| %>
+		<%= form_for(@order,url:orders_path) do |f| %>
 		<%= f.hidden_field :product_id %>
-		<%= f.submit "カートに入れる"%>
+		<%= f.submit "購入する" %>
 		<%= f.select :quantity, [1,2,3,4,5,6,7,8,9,10] %>
 		<% end %>
 	</div>
