--- a/app/views/admins/products/new.html.erb
+++ b/app/views/admins/products/new.html.erb
@@ -13,6 +13,8 @@
 	<%= f.label :price %>
 	<%= f.text_field :price %>
 	<%= f.select :is_stopped, {Sale: false, Suspended_sales: true} %>
+	<%= f.label :stock %>
+	<%= f.number_field :stock, min:1, max:100 %>
 	<%= f.submit "Register" %>
 	<% end %>
 </div>
