--- a/app/views/admins/users/index.html.erb
+++ b/app/views/admins/users/index.html.erb
@@ -1,2 +1,25 @@
-<h1>Admins::Users#index</h1>
-<p>Find me in app/views/admins/users/index.html.erb</p>
+<div>
+	<h1>会員一覧画面</h1>
+	<table>
+			<tr>
+				<th>会員ID</th>
+				<th>名前</th>
+				<th>メールアドレス</th>
+				<th>ステータス</th>
+			</tr>
+			<% @user.each do |user| %>
+			<tr>
+				<td><%= user.id %></td>
+				<td><%= user.first_name %> <%= user.last_name %></td>
+				<td><%= user.email %></td>
+				<td><% if user.is_deleted == false %>
+					<span>有効会員</span>
+					<% else %>
+					<span>退会済み</span>
+					<% end %>
+				</td>
+			</tr>
+		<% end %>
+	</table>
+
+</div>
