--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -27,7 +27,7 @@
 		<%= link_to home_about_path do %>
 			<p>About</p>
 		<% end %>
-		<%= link_to cart_items_path do %>
+		<%= link_to root_path do %>
 			<p>Shooping</p>
 		<% end %>
 		<%= link_to destroy_user_session_path, method: :delete do %>
