--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -17,10 +17,17 @@
 </style>
 
 <div class="side-menu">
+
+	<% if user_signed_in? && current_user.is_deleted? %>
+		<p>あなたは退会済みです</p>
+	<% elsif user_signed_in? && !current_user.is_deleted %>
+		<p>こんにちは、<%= current_user.first_name %>さん</p>
+	<% end %>
+
 	<%= link_to root_path do %>
 	<img src="/assets/logo.jpg" alt="非表示" style="margin: 50px 50px 0 50px;" width="250" height="250">
 	<% end %>
-	<% if user_signed_in? %>
+	<% if user_signed_in? && !current_user.is_deleted? %>
 		<%= link_to user_path(current_user.id) do %>
 			<p>User</p>
 		<% end %>
