--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -2,7 +2,7 @@
 	<%= render "layouts/header" %>
 	<h1>ユーザ編集画面</h1>
 	<%= form_for(@user, url:user_path(@user), method: :patch) do |f| %>
-	<%= link_to stop_user_path(@user), method: :patch do %>
+	<%= link_to leave_user_path(@user), method: :patch do %>
     <span>退会する</span>
     <% end %>
 	<table>
