Remove routes.rb admin_order_index  Add routes.rb user_order_index

--- a/app/views/admins/products/index.html.erb
+++ b/app/views/admins/products/index.html.erb
@@ -35,9 +35,7 @@
 						<span>Sale</span>
 					<% end %>
 				</td>
-				<td>
-					<%= product.stock %>
-				</td>
+				<td><%= product.stock %></td>
 			</tr>
 			<% end %>
 		</tbody>
