Add available_action available_method  and  unavailable_action unavailable_method

--- a/app/views/layouts/_adminheader.html.erb
+++ b/app/views/layouts/_adminheader.html.erb
@@ -28,7 +28,7 @@
 		<%=link_to admins_users_path do %>
 			<P>Member</P>
 		<% end %>
-		<%=link_to  admins_orders_path do %>
+		<%=link_to  admins_path do %>
 			<p>Order history</p>
 		<% end %>
 		<%=link_to admins_genres_path do %>
