--- a/app/views/admins/products/index.html.erb
+++ b/app/views/admins/products/index.html.erb
@@ -35,7 +35,7 @@
 						<span>Sale</span>
 					<% end %>
 				</td>
-				<td><%= product.stock %></td>
+				<td><%= product.stock %>個</td>
 			</tr>
 			<% end %>
 		</tbody>
