Fix order_index Add Inventory management system

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -12,7 +12,7 @@
 		<%= form_for(@order,url:orders_path) do |f| %>
 		<%= f.hidden_field :product_id %>
 		<%= f.submit "購入する" %>
-		<%= f.select :quantity, [1,2,3,4,5,6,7,8,9,10] %>
+		<%= f.select :quantity, [*1..@product.stock.to_i] %>
 		<% end %>
 	</div>
 </div>
