--- a/app/views/admins/products/edit.html.erb
+++ b/app/views/admins/products/edit.html.erb
@@ -16,7 +16,7 @@
 	<%= f.label :is_stopped %>
 	<%= f.select :is_stopped, {Sale:false,Suspended_sales:true} %>
 	<%= f.label :stock %>
-	<%= f.text_field :stock, [min:1,max:100] %>
+	<%= f.select :stock, [*1..100] %>
 	<%= f.submit "Register" %>
 	<% end %>
 </div>
