--- a/app/views/orders/finish.html.erb
+++ b/app/views/orders/finish.html.erb
@@ -1,3 +1,9 @@
-<div>
-	<h1>購入ありがとうございました！！！！</h1>
+<div class="row">
+	<div class="col-lg-3">
+		<%= render "layouts/header" %>
+	</div>
+	<div class="col-lg-9">
+		<h1 style="padding: 180px 100px 0 150px;">購入ありがとうございました!!!!</h1>
+		<h4 style="padding-left: 250px;">またのご利用をお待ちしております!!!!</h4>
+	</div>
 </div>
