--- a/app/views/admins/products/show.html.erb
+++ b/app/views/admins/products/show.html.erb
@@ -1,35 +1,41 @@
-<div>
-	<%= render "layouts/adminheader" %>
-	<%= attachment_image_tag @product, :image, :fill, 50, 50 %>
-	<table>
-		<tr>
-			<th>Name</th>
-			<td><%= @product.name %></td>
-		</tr>
-		<tr>
-			<th>Introduction</th>
-			<td><%= @product.introduction %></td>
-		</tr>
-		<tr>
-			<th>Genre</th>
-			<td><%= @product.genre.name %></td>
-		</tr>
-		<tr>
-			<th>Tax-included price</th>
-			<td><%= addTax(@product.price) %> (<%=@product.price%>)円</td>
-		</tr>
-		<tr>
-			<th>Sales status</th>
-			<td>
-				<% if @product.is_stopped == false %>
-					販売中
-				<% elsif @product.is_stopped == true %>
-					販売停止
-				<% end %>
-			</td>
-		</tr>
-	</table>
-	<%= link_to edit_admins_product_path(@product.id) do %>
-		<span>編集する</span>
-	<% end %>
+<div class="row">
+	<div class="col-lg-3">
+		<%= render "layouts/adminheader" %>
+	</div>
+	<div class="col-lg-9", style = "margin: 0; padding: 0;">
+		<div style = "margin: 180px 0 0 100px;">
+		<%= attachment_image_tag @product, :image, :fill, 500, 500 %>
+		<table>
+			<tr>
+				<th>商品名</th>
+				<td><%= @product.name %></td>
+			</tr>
+			<tr>
+				<th>商品説明</th>
+				<td><%= @product.introduction %></td>
+			</tr>
+			<tr>
+				<th>ジャンル</th>
+				<td><%= @product.genre.name %></td>
+			</tr>
+			<tr>
+				<th>価格(税込価格)</th>
+				<td><%= addTax(@product.price) %> (<%=@product.price%>)円</td>
+			</tr>
+			<tr>
+				<th>販売ステータス</th>
+				<td>
+					<% if @product.is_stopped == false %>
+						販売中
+					<% elsif @product.is_stopped == true %>
+						販売停止
+					<% end %>
+				</td>
+			</tr>
+		</table>
+		<%= link_to edit_admins_product_path(@product.id) do %>
+			<span>編集する</span>
+		<% end %>
+	</div>
+</div>
 </div>
