--- a/app/views/layouts/_adminheader.html.erb
+++ b/app/views/layouts/_adminheader.html.erb
@@ -1,42 +1,43 @@
 <style>
-	ul{
-		list-style: none;
+	.logo{
+		display: block;
+ 		margin: 0 90px 50px 90px;
 	}
-
-	#side-menu{
-		width:350px;
-		min-height:900px;
-		height:auto;
-		float:left;
-	}
-	p{
+	.account{
 		text-align: center;
-		color: #808080;
-		margin: 30px;
+		padding-top: 80px;
+		font-size: 20px;
+	}
+	li{
+		list-style: none;
+		text-align: center;
+		margin: 150px 0 100px 0;
+		size: 50px;
+	}
+	.list{
+		margin: 0;
+		padding: 0;
+		font-size: 25px;
+	}
+	.link{
+		color: #555555;
+		text-decoration: none;
 	}
 </style>
 
 <div class="side-menu">
 	<% if admin_signed_in? %>
-	<%= link_to admins_path do %>
-		<img src="/assets/logo.jpg" style="height:100px; display:block; margin: 0 auto;">
+		<div>
+			<img src="/assets/logo.jpg", class="logo">
+		</div>
+		<div>
+			<ul class="list">
+				<li><%=link_to "Product",admins_products_path, class: "link" %></li>
+				<li><%=link_to "Member", admins_users_path, class: "link" %></li>
+				<li><%=link_to "Order history", admins_path, class: "link" %></li>
+				<li><%=link_to "genre",admins_genres_path, class: "link" %></li>
+				<li><%=link_to "logout",destroy_admin_session_path, method: :delete, class: "link"%></li>
+			</ul>
+		</div>
 	<% end %>
-	<div>
-		<%=link_to admins_products_path do %>
-			<p>商品一覧</p>
-		<% end %>
-		<%=link_to admins_users_path do %>
-			<P>Member</P>
-		<% end %>
-		<%=link_to  admins_path do %>
-			<p>Order history</p>
-		<% end %>
-		<%=link_to admins_genres_path do %>
-			<p>Genre</p>
-		<% end %>
-		<%=link_to destroy_admin_session_path, method: :delete do %>
-			<p>logout</p>
-		<% end %>
-	<% end %>
-</div>
 </div>
