--- a/app/views/admins/genres/edit.html.erb
+++ b/app/views/admins/genres/edit.html.erb
@@ -1,7 +1,16 @@
-<div>
-	<%= form_for(@genre, url: admins_genre_path, method: :patch) do |f| %>
-	<%= f.label :genre %>
-	<%= f.text_field :name %>
-	<%= f. submit "登録する" %>
-	<% end %>
+<div class="row">
+	<div class="col-lg-3", style="margin:0; padding: 0;">
+		<%= render "layouts/adminheader"%>
+	</div>
+	<div class ="col-lg-9", style="margin:0; padding: 0;">
+		<div style="margin-top: 90px;">
+			<%= form_for(@genre, url: admins_genre_path, method: :patch) do |f| %>
+				<div class="form-group">
+					<label>ジャンル</label>
+					<%= f.text_field :name %>
+				</div>
+				<%= f. submit "登録する" %>
+			<% end %>
+		</div>
+	</div>
 </div>
