--- a/app/views/admins/genres/index.html.erb
+++ b/app/views/admins/genres/index.html.erb
@@ -1,18 +1,41 @@
-<div>
-	<%= render "layouts/adminheader"%>
-	<h1>ジャンル管理画面</h1>
-	<%= form_for(@genre, url:admins_genres_path) do |f| %>
-		<%= f.label :ジャンル %>
-		<%= f.text_field :name %>
-		<%= f.submit "追加"%>
-	<% end %>
-	<% @genres.each do |genre| %>
-		<%= genre.name %>
-		<% if genre.is_disable == false %>
-			<%= link_to "無効にする", disable_admins_genre_path(genre), method: :patch %>
-		<% elsif genre.is_disable == true %>
-			<%= link_to "有効にする", enable_admins_genre_path(genre), method: :patch %>
-		<% end %>
-		<%= link_to " 編集する", edit_admins_genre_path(genre.id) %>
-	<% end %>
+<div class="row">
+	<div class="col-lg-3", style= "margin: 0; padding: 0;">
+		<%= render "layouts/adminheader"%>
+	</div>
+	<div class="col-lg-9", style="margin: 0; padding: 0;">
+		<div style ="margin-top: 90px; padding-right: 60px;">
+			<h1>ジャンル管理画面</h1>
+			<%= form_for(@genre, url:admins_genres_path) do |f| %>
+				<div class="form-group">
+					<label>ジャンル</label>
+					<%= f.text_field :name %>
+				</div>
+				<div class="btn-group">
+					<%= f.submit "追加"%>
+				</div>
+			<% end %>
+			<table class="table">
+					<tr>
+						<th>ジャンル名</th>
+						<th></th>
+						<th></th>
+					</tr>
+					<% @genres.each do |genre| %>
+					<tr>
+						<td><%= genre.name %></td>
+						<td>
+							<% if genre.is_disable == false %>
+								<%= link_to "無効にする", disable_admins_genre_path(genre), method: :patch %>
+							<% elsif genre.is_disable == true %>
+								<%= link_to "有効にする", enable_admins_genre_path(genre), method: :patch %>
+							<% end %>
+						</td>
+						<td>
+							<%= link_to " 編集する", edit_admins_genre_path(genre.id) %>
+						</td>
+					</tr>
+				<% end %>
+			</table>
+		</div>
+	</div>
 </div>
