--- a/app/views/admins/home/top.html.erb
+++ b/app/views/admins/home/top.html.erb
@@ -1,33 +1,45 @@
-<div>
-	<h1>本日購入された商品</h1>
-	<% @order.each do |order| %>
-	<%# byebug %>
-	<%= attachment_image_tag order.product, :image, :fill, 150,150 %>
-	<table>
-		<tr>
-			<th>購入日</th>
-			<td><%=  order.created_at.strftime('%Y/%m/%d') %></td>
-		</tr>
-		<tr>
-			<th>商品名</th>
-			<td><%= order.product.name %></td>
-		</tr>
-		<tr>
-			<th>支払い金額</th>
-			<td><%= total_price(order) %>円(税込み + 送料 )</td>
-		</tr>
-		<tr>
-			<th>購入個数</th>
-			<td><%= order.quantity%>個</td>
-		</tr>
-		<tr>
-			<th>支払い方法</th>
-			<td><%= order.payment %></td>
-		</tr>
-		<tr>
-			<th>配送状況</th>
-			<td><%= order.delivery_status %></td>
-		</tr>
-	</table>
-	<% end %>
+<style>
+	.item{
+		display: inline-block;
+	}
+</style>
+
+<div class="row">
+	<div class="col-lg-3", style= "margin: 0; padding: 0;">
+		<%= render "layouts/adminheader"%>
+	</div>
+	<div class="col-lg-9", style="margin:0; padding: 0;">
+		<div class="item", style ="margin-top: 85px;">
+			<h1>本日購入された商品</h1>
+			<% @order.each do |order| %>
+				<%= attachment_image_tag order.product, :image, :fill, 150,150 %>
+				<table>
+					<tr>
+						<th>購入日</th>
+						<td><%=  order.created_at.strftime('%Y/%m/%d') %></td>
+					</tr>
+					<tr>
+						<th>商品名</th>
+						<td><%= order.product.name %></td>
+					</tr>
+					<tr>
+						<th>支払い金額</th>
+						<td><%= total_price(order) %>円(税込み + 送料 )</td>
+					</tr>
+					<tr>
+						<th>購入個数</th>
+						<td><%= order.quantity%>個</td>
+					</tr>
+					<tr>
+						<th>支払い方法</th>
+						<td><%= order.payment %></td>
+					</tr>
+					<tr>
+						<th>配送状況</th>
+						<td><%= order.delivery_status %></td>
+					</tr>
+				</table>
+			<% end %>
+		</div>
+	</div>
 </div>
