--- a/app/views/admins/orders/index.html.erb
+++ b/app/views/admins/orders/index.html.erb
@@ -1,21 +1,28 @@
-<div>
-	<h1>注文履歴一覧</h1>
-	<table>
-			<tr>
-				<th>注文日</th>
-				<th>注文者名</th>
-				<th>注文商品</th>
-				<th>注文個数</th>
-				<th>ステータス</th>
-			</tr>
-			<% @order.each do |order| %>
-			<tr>
-				<td><%= order.created_at.strftime("%Y-%m-%d %H:%M") %></td>
-				<td><%= order.user.first_name %><%= order.user.last_name %></td>
-				<td><%= order.product.name %></td>
-				<td><%= order.quantity %></td>
-				<td><%= order.delivery_status %></td>
-			</tr>
-			<% end %>
-	</table>
+<div class="row">
+	<div class="col-lg-3", style= "margin: 0; padding: 0;">
+		<%= render "layouts/adminheader"%>
+	</div>
+	<div class="col-lg-9", style="margin: 0; padding: 0;">
+		<div style ="margin-top: 90px; padding-right: 10px;">
+			<h1>注文履歴一覧</h1>
+			<table class="table">
+					<tr>
+						<th>注文日</th>
+						<th>注文者名</th>
+						<th>注文商品</th>
+						<th>注文個数</th>
+						<th>ステータス</th>
+					</tr>
+					<% @order.each do |order| %>
+					<tr>
+						<td><%= order.created_at.strftime("%Y-%m-%d %H:%M") %></td>
+						<td><%= order.user.first_name %><%= order.user.last_name %></td>
+						<td><%= order.product.name %></td>
+						<td><%= order.quantity %></td>
+						<td><%= order.delivery_status %></td>
+					</tr>
+					<% end %>
+			</table>
+		</div>
+	</div>
 </div>
