--- a/app/views/layouts/_adminheader.html.erb
+++ b/app/views/layouts/_adminheader.html.erb
@@ -34,7 +34,7 @@
 			<ul class="list">
 				<li><%=link_to "Product",admins_products_path, class: "link" %></li>
 				<li><%=link_to "Member", admins_users_path, class: "link" %></li>
-				<li><%=link_to "Order history", admins_path, class: "link" %></li>
+				<li><%=link_to "Order history", admins_orders_path, class: "link" %></li>
 				<li><%=link_to "genre",admins_genres_path, class: "link" %></li>
 				<li><%=link_to "logout",destroy_admin_session_path, method: :delete, class: "link"%></li>
 			</ul>
