--- a/app/views/admins/products/edit.html.erb
+++ b/app/views/admins/products/edit.html.erb
@@ -28,7 +28,7 @@
 		</div>
 		<div class="form-group">
 			<label>販売ステータス</label>
-			<%= f.select :is_stopped, {Sale:false,Suspended_sales:true} %>
+			<%= f.select :is_stopped, {販売中:false,販売停止:true} %>
 		</div>
 		<div class="form-group">
 			<label>在庫数</label>
