--- a/app/views/admins/products/index.html.erb
+++ b/app/views/admins/products/index.html.erb
@@ -30,9 +30,9 @@
 					<td><%= product.genre.name %></td>
 					<td>
 						<% if product.is_stopped? %>
-							<span>Suspended_sales</span>
+							<span>販売停止</span>
 						<% else %>
-							<span>Sale</span>
+							<span>販売中</span>
 						<% end %>
 					</td>
 					<td><%= product.stock %>個</td>
