--- a/app/views/admins/users/index.html.erb
+++ b/app/views/admins/users/index.html.erb
@@ -9,8 +9,8 @@
 				<th>会員ID</th>
 				<th>名前</th>
 				<th>メールアドレス</th>
-				<th>ステータス</th>
-				<th>詳細へ</th>
+				<th>顧客ステータス</th>
+				<th></th>
 			</tr>
 			<% @user.each do |user| %>
 			<tr>
