--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -11,8 +11,8 @@
 	<div class="col-lg-9", style ="margin: 0; padding: 0; height: 500px; width: 1000px;">
 		<h1>注文履歴一覧</h1>
 		<% @order.each do |order| %>
-		<div class="item", style = "height: 280px; padding: 10px; margin-top: 10px;">
-			<%= attachment_image_tag serch_product(order), :image, :fill, 180, 180 %><br>
+			<div class="item", style = "width: 260px; height: 280px; margin-top: 10px;">
+				<%= attachment_image_tag serch_product(order), :image, :fill, 180, 180 %><br>
 				<span>注文日</span>
 					<span><%= order.created_at.strftime('%Y/%m/%d')%></span><br>
 				<span>注文者</span>
@@ -20,7 +20,7 @@
 				<span>注文商品</span>
 					<span><%= @product.name %></span><br>
 				<span>注文個数</span>
-					<span><%= order.quantity %></span><br>
+					<span><%= order.quantity %>個</span><br>
 				<span>支払い金額</span>
 					<span><%= total_price(order) %></span><br>
 				<span>支払い方法</span>
@@ -29,7 +29,7 @@
 					<span><%= order.delivery_status %></span><br>
 				<span>配送先</span>
 					<span><%= @user.address %></span><br>
-			<% end %>
-		</div>
+			</div>
+		<% end %>
 	</div>
 </div>
