--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,44 +1,50 @@
-<div>
-	<%= render "layouts/header" %>
-	<h1>ユーザ編集画面</h1>
-	<%= form_for(@user, url:user_path(@user), method: :patch) do |f| %>
-	<%= link_to leave_user_path(@user), method: :patch do %>
-    <span>退会する</span>
-    <% end %>
-	<table>
-			<tr>
-				<th><%= f.label :first_name %></th>
-				<td><%= f.text_field :first_name %></td>
-			</tr>
-			<tr>
-				<th><%= f.label :last_name %></th>
-				<td><%= f.text_field :last_name %></td>
-			</tr>
-			<tr>
-				<th><%= f.label :first_name_kana %></th>
-				<td><%= f.text_field :first_name_kana %></td>
-			</tr>
-			<tr>
-				<th><%= f.label :last_name_kana %></th>
-				<td><%= f.text_field :last_name_kana %></td>
-			</tr>
-			<tr>
-				<th><%= f.label :postal_code %></th>
-				<td><%= f.text_field :postal_code %></td>
-			</tr>
-			<tr>
-				<th><%= f.label :address %></th>
-				<td><%= f.text_field :address %></td>
-			</tr>
-			<tr>
-				<th><%= f.label :phone %></th>
-				<td><%= f.text_field :phone %></td>
-			</tr>
-			<tr>
-				<th><%= f.label :email %></th>
-				<td><%= f.text_field :email %></td>
-			</tr>
-	</table>
-			<%= f.submit "更新する" %>
-	<% end %>
+<div class="row">
+	<div class="col-lg-3", style="margin: 0; padding: 0;">
+		<%= render "layouts/header" %>
+	</div>
+	<div class="col-lg-9", style="margin: 0; padding: 0;">
+		<div style ="margin-top: 70px;">
+			<h1>ユーザ編集画面</h1>
+			<%= form_for(@user, url:user_path(@user), method: :patch) do |f| %>
+				<%= link_to leave_user_path(@user), method: :patch do %>
+			    	<span>退会する</span>
+			    <% end %>
+			    <div class="form-group">
+					<label>姓</label>
+					<%= f.text_field :first_name %>
+				</div>
+				<div class="form-group">
+					<label>名</label>
+					<%= f.text_field :last_name %>
+				</div>
+				<div class="form-group">
+					<label>セイ</label>
+					<%= f.text_field :first_name_kana %>
+				</div>
+				<div class="form-group">
+					<label>メイ</label>
+					<%= f.text_field :last_name_kana %>
+				</div>
+				<div class="form-group">
+						<label>郵便番号</label>
+						<%= f.text_field :postal_code %>
+				</div>
+				<div class="form-group">
+					<label>住所</label>
+					<%= f.text_field :address %>
+				</div>
+				<div class="form-group">
+					<label>電話番号</label>
+					<%= f.text_field :phone %>
+				</div>
+				<div class="form-group">
+					<label>メールアドレス</label>
+					<%= f.text_field :email %>
+				</div>
+				<div class="btn-group">
+					<%= f.submit "更新する" %>
+				</div>
+			<% end %>
+		</div>
+	</div>
 </div>
