--- a/app/views/admins/article/new.html.erb
+++ b/app/views/admins/article/new.html.erb
@@ -2,17 +2,14 @@
 	<div class="col-lg-3">
 		<%= render "layouts/adminheader"%>
 	</div>
-	<div class="col-lg-9">
+	<div class="col-lg-9", style = "margin-top: 70px;">
 		<h1>記事新規登録画面</h1>
-		<%= form_for(@article, url:admins_article_index_path, method: :post) do |f| %>
+		<%= simple_form_for(@article, url:admins_article_index_path, method: :post) do |f| %>
 			<div class="form-group">
 				<label>記事名</label>
 				<%= f.text_field :name %>
 			</div>
-			<div class="form-group">
-				<label>記事の内容</label>
-				<%= f.text_area :introduction %>
-			</div>
+			<%= f.input :introduction, as: :summernote %>
 			<div class="btn-group">
 				<%= f.submit "登録する"%>
 			</div>
